displaying tails on ui adding search and filtering capabilities