@@ -3,6 +3,7 @@ package com.n1netails.n1netails.api.service.impl;
 import com.n1netails.n1netails.api.exception.type.TailLevelNotFoundException;
 import com.n1netails.n1netails.api.exception.type.TailNotFoundException;
 import com.n1netails.n1netails.api.exception.type.TailStatusNotFoundException;
+import com.n1netails.n1netails.api.exception.type.TailTypeNotFoundException;
 import com.n1netails.n1netails.api.model.core.TailLevel;
 import com.n1netails.n1netails.api.model.core.TailStatus;
 import com.n1netails.n1netails.api.model.core.TailType;
@@ -24,7 +25,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -263,33 +263,45 @@ public class TailServiceImpl implements TailService {
     }
 
     @Override
-    public Page<TailResponse> getTails(TailPageRequest request) {
+    public Page<TailResponse> getTails(TailPageRequest request) throws TailStatusNotFoundException, TailTypeNotFoundException, TailLevelNotFoundException {
         Pageable pageable = PageRequest.of(request.getPage(), request.getSize());
 
         String searchTerm = request.getSearchTerm() == null || request.getSearchTerm().isEmpty() ? "" : request.getSearchTerm();
 
         List<String> statuses;
         if (request.getFilterByStatus() == null || request.getFilterByStatus().isEmpty()) {
-            statuses = Arrays.asList("OPEN", "IN_PROGRESS", "RESOLVED", "CLOSED"); // Default list
+            List<TailStatusEntity> statusEntities = this.statusRepository.findAll();
+            statuses = statusEntities.stream().map(TailStatusEntity::getName).toList();
         } else {
-            statuses = Arrays.asList(request.getFilterByStatus());
+            TailStatusEntity tailStatusEntity = this.statusRepository.findTailStatusByName(request.getFilterByStatus())
+                    .orElseThrow(() -> new TailStatusNotFoundException("Requested status name does not exist."));
+            statuses = List.of(tailStatusEntity.getName());
         }
+        log.info("STATUS NAMES: {}", statuses);
 
         List<String> types;
         if (request.getFilterByType() == null || request.getFilterByType().isEmpty()) {
-            types = Arrays.asList("BUG", "FEATURE_REQUEST", "INCIDENT", "OTHER"); // Default list
+            List<TailTypeEntity> tailTypeEntities = this.typeRepository.findAll();
+            types = tailTypeEntities.stream().map(TailTypeEntity::getName).toList();
         } else {
-            types = Arrays.asList(request.getFilterByType());
+            TailTypeEntity tailTypeEntity = this.typeRepository.findTailTypeByName(request.getFilterByType())
+                    .orElseThrow(() -> new TailTypeNotFoundException("Requested type name does not exist."));
+            types = List.of(tailTypeEntity.getName());
         }
+        log.info("TYPE NAMES: {}", types);
 
         List<String> levels;
         if (request.getFilterByLevel() == null || request.getFilterByLevel().isEmpty()) {
-            levels = Arrays.asList("CRITICAL", "HIGH", "NORMAL", "LOW"); // Default list
+            List<TailLevelEntity> tailLevelEntities = this.levelRepository.findAll();
+            levels = tailLevelEntities.stream().map(TailLevelEntity::getName).toList();
         } else {
-            levels = Arrays.asList(request.getFilterByLevel());
+            TailLevelEntity tailLevelEntity = this.levelRepository.findTailLevelByName(request.getFilterByLevel())
+                    .orElseThrow(() -> new TailLevelNotFoundException("Requested level name does not exist."));
+            levels = List.of(tailLevelEntity.getName());
         }
+        log.info("LEVEL NAMES: {}", levels);
 
-        Page<TailSummary> tailPage = tailRepository.findAllByTitleContainingIgnoreCaseAndStatusNameInAndTypeNameInAndLevelNameInOrderByTimestampDesc(
+        Page<TailSummary> tailPage = tailRepository.findAllBySearchTermAndTailFilters(
                 searchTerm,
                 statuses,
                 types,
